--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "control led with voice",
   "main": "main.js",
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./server.js",
+    "install": "npm install  body-parser cors edison-io express galileo-io johnny-five"
   },
   "author": "Pufarina",
   "license": "MIT",
